<resources>
    <string name="app_name">Careerguide</string>
    <string name="_1_do_you_have_strong_technical_skills">1.Do you have strong technical skills?</string>
    <string name="sub_name">Find Your Path Here…!</string>
    <string name="goal">Goal Oriented</string>
    <string name="general">General</string>
    <string name="puc"><b>PUC</b> (2 years)</string>
    <string name="diploma_name"><b>2.Diploma</b> (3 years)</string>
    <string name="pcm">PCM (Physics, Chemistry, Mathematics)</string>
    <string name="pcb">PCB (Physics, Chemistry, Biology)</string>
    <string name="class10"><b>CLASS 10</b></string>
    <string name="class12"><b>CLASS 12</b></string>
    <string name="pcm_choices_sub"><b>PCM</b>(options)</string>
    <string name="pcb_choices_sub"><b>PCB</b>(options)</string>
    <string name="science"><b>1.Science</b>\n\n<ul><li>Physics, Chemistry, Maths, Biology(PCMB)</li>
        \n\n<li>Physics, Chemistry, Maths, ComputerScience(PCMC)</li>
        \n\n<li>Physics, Chemistry, Maths, Statistics(PCMS)</li></ul>
        \n\n\n<b>2.Commerece</b>\n\n<ul><li>Statistics, Economics, Business Studies, Accountancy(SEBA)</li>
            \n\n<li>Basic Mathematics, Economics, Business Studies, Accountancy(BEBA)</li>
            \n\n<li>Basic Mathematics, Statistics, Business Studies, Accountancy(BSBA)</li>
            \n\n<li>Computer Science, Statistics, Business Studies, Accountancy(CSBA)</li>
            \n\n<li>Computer Science, Economics, Business Studies, Accountancy(CEBA)</li></ul>
        \n\n\n<b>3.Arts</b>\n\n<ul><li>History, Economics, Political Science, Psychology(HEPP)</li></ul>
    </string>
    <string name="Diploma">\n<ul><li>Automobile Engineering</li>
        \n\n<li>Chemical Engineering</li>
        \n\n<li>Civil Engineering</li>
        \n\n<li>Computer Science and Engineering</li>
        \n\n<li>Electrical and Electronics Engineering</li>
        \n\n<li>Electronics and Communication Engineering</li>
        \n\n<li>Mechanical Engineering</li>
        \n\n<li>Polymer Technology</li></ul></string>
    <string name="pcm_choices"><b>1.Bachelor in Technology/ Bachelor in Engineering (BE, B. Tech)</b>

    \nIts a 4 year course.
        \n\nEligibility Criteria :
        \n\n<ul><li>Above 60% in SSLC and PUC</li>
         \n\n<li>KCET/COMEDK/JEE MAINS entrance exams (optional)</li>
        </ul>
    \n\n<ul><li>Computer Science and Engineering (CSE)</li>
            \nJob Roles:
        \n\n<li>AI and Machine Learning</li>
        \n\n<li>Data Science</li>
        \n\n<li>Cyber Security</li>
        \n\n<li>Electronics and Communication Engineering</li>
        \n\n<li>Information Science and Engineering</li>
        \n\n<li>AI and Data Science</li>
        \n\n<li>Robotics and Automation</li>
        </ul></string>
    <string name="pcm_choices1"><b>1.Bachelor in Technology/ Bachelor in Engineering (BE, B. Tech)</b></string>
    <string name="pcm_choices2"><b>2.Bachelor of Computer Application(BCA)</b></string>
    <string name="pcm_choices3"><b>3.Bachelor of Architecture (B.Arch)</b></string>
    <string name="pcb_choices1"><b>1.MBBS</b></string>
    <string name="pcb_choices2"><b>2.BDS</b></string>
    <string name="pcb_choices3"><b>3.B.Pharma</b></string>
    <string name="pcb_choices4"><b>4.MBBS</b></string>
    <string name="pcm11">Computer Science and Engineering (CSE)</string>
    <string name="pcm12">Electronics and Communication Engineering (ECE)</string>
    <string name="pcm13">Artificial Intellegence and Machine Learning (AI and ML)</string>
    <string name="pcm21">Bachelor of Computer Application(BCA)</string>
    <string name="pcm31">Bachelor of Architecture (B.Arch)</string>
    <string name="pcb1">Bachelor of Medicine and Bachelor of Surgery (MBBS)</string>
    <string name="pcb2">Bachelor of Dental Surgery (BDS)</string>
    <string name="pcb3">Bachelors in Pharmacy (B.Pharma)</string>
    <string name="com1">Bachelor of Commerce (B.Com)</string>
    <string name="com2">Bachelor of Business Administration (BBA)</string>
    <string name="com3">Chartered Accountancy (CA)</string>
    <string name="com4">Company Secretary (CS)</string>
    <string name="arts1">Bachelor of Arts (BA)</string>
    <string name="arts2">Bachelors in Journalism and Mass Communication (BJMC)</string>
    <string name="arts3">Bachelor of Fine Arts (BFA)</string>
    <string name="cse"><b>Info :</b>\n\nComputer engineers manage and design the computer hardware and software systems of a company. These skilled individuals may specialize in hardware or software and are often referred to as programmers. Their duties include developing software systems, updating hardware, and designing new equipment.
        \n\n\n<b>Duration :</b>\n\n4 Years.
    \n\n\n<b>Eligibility Criteria :</b>
    \n\n<ul><li>Complete 10+12th in PCM with minimum aggregate marks of 60%.</li>
        \n\n<li>Qualify Entrance Exams like :
            \n\nJEE Main- JEE Main is an online National Level entrance exam conducted to grant admission for engineering programs. It is conducted by the National Testing Agency (NTA) and is 3 hours long.
            \n\nJEE Advanced- JEE Advanced or Joint Entrance Exam Advanced is a 3 hour long online national level entrance exam conducted by one of the IITs every year.
            \n\nKCET- kCET is also known as Karnataka Common Entrance Test.Karnataka CET Exam is a state-level entrance exam organized for providing admissions in Engineering, Pharmacy, Pharma D and other courses offered by colleges and institutions located in the state.</li></ul>
    \n\n\n<b>Some Job Profiles :</b>
        \n\n<ul><li><b>Software Developer</b>
            \n\nThe role of software developers is to develop applications that enable people to perform specific tasks on a computer or another device.</li>
        \n\n<li><b>Software Engineer :</b>
        \n\nSoftware engineer design, develop, maintain, test, and evaluate computer software.</li>
        \n\n<li><b>Lecturer/Professor :</b>
            \n\nA computer science lecturer or professor would impart knowledge of the subject. The role will also include teaching students about the nuances of computer applications and designs applicable in the field.</li>
            \n\n<li><b>Software Quality Assurance Engineer :</b>
                \n\nSoftware quality assurance engineer is a software tester who develops various codes and test cases in order to analyse the efficiency and accuracy of a software product. These types of computer systems engineer jobs include handling a variety of tasks that are both technical and non-technical.
            </li></ul></string>
    <string name="ece"><b>Info :</b>\n\nElectronics engineers use their knowledge to design, develop, evaluate, and maintain electronic systems and components. They may be employed by small companies or work in commercial sectors. Day-to-day duties vary based on the field, but they generally design, plan, perform research, inspect the equipment, attend conferences, and liaise with others.
        \n\n\n<b>Duration :</b>\n\n4 Years.
    \n\n\n<b>Eligibility Criteria :</b>
    \n\n<ul><li>Complete 10+12th in PCM with minimum aggregate marks of 60%.</li>
        \n\n<li>Qualify Entrance Exams like :
            \n\nJEE Main- JEE Main is an online National Level entrance exam conducted to grant admission for engineering programs. It is conducted by the National Testing Agency (NTA) and is 3 hours long.
            \n\nJEE Advanced- JEE Advanced or Joint Entrance Exam Advanced is a 3 hour long online national level entrance exam conducted by one of the IITs every year.
            \n\nKCET- kCET is also known as Karnataka Common Entrance Test.Karnataka CET Exam is a state-level entrance exam organized for providing admissions in Engineering, Pharmacy, Pharma D and other courses offered by colleges and institutions located in the state.</li></ul>
    \n\n\n<b>Some Job Profiles :</b>
    \n\n<ul><li><b>t</b></li></ul></string>
    <string name="ai"><b>Info :</b>\n\n
    \n\n\n<b>Duration :</b>\n\n4 Years.
    \n\n\n<b>Eligibility Criteria :</b>
        \n\n<ul><li>Complete 10+12th in PCM with minimum aggregate marks of 60%.</li>
        \n\n<li>Qualify Entrance Exams like :
        \n\nJEE Main- JEE Main is an online National Level entrance exam conducted to grant admission for engineering programs. It is conducted by the National Testing Agency (NTA) and is 3 hours long.
            \n\nJEE Advanced- JEE Advanced or Joint Entrance Exam Advanced is a 3 hour long online national level entrance exam conducted by one of the IITs every year.
            \n\nKCET- KCET is also known as Karnataka Common Entrance Test.Karnataka CET Exam is a state-level entrance exam organized for providing admissions in Engineering, Pharmacy, Pharma D and other courses offered by colleges and institutions located in the state.</li></ul>
    \n\n\n<b>Some Job Profiles :</b>
    \n\n<ul><li><b>t</b></li></ul>
    </string>
    <string name="bca"><b>Info :</b>\n\nBachelor Of Computer Application (BCA) as the name implies, the major focus of BCA is to make a strong emphasis on the application of computer science in the current scenario. Understanding how hardware works and the technical side of things in-depth is not very important here, but a brief idea is much needed.
    \nThis program includes subjects as computer network, web development, mobile application development, multimedia technology, and the fundamentals of computer programming. Here we will also be taught a few of the subject that helps in improving and managing ourselves in the corporate field.
    \n\n\n<b>Duration :</b>\n\n3 Years.
    \n\n\n<b>Eligibility Criteria :</b>
    \n\n<ul><li>Complete 10+12th in PCM with minimum aggregate marks of 50%.</li></ul>
    \n\n\n<b>Some Job Profiles :</b>
    \n\n<ul><li><b>Data Scientist :</b>
        \n\nData scientists help businesses gain valuable insights from swathes of data. Data scientists help companies find solutions to their business problems. With data, companies can make informed decisions and plans.</li>
            \n\n<li><b>Technical Support Engineer :</b>
            \n\nTech Support Engineers are responsible for assisting the company in resolving technical issues with customer accounts. Aside from customer issues, technical support engineers solve company software infrastructure issues. </li>
        \n\n<li><b>Digital Marketer :</b>
            \n\nDigital marketing is a well-known high-income area for BCA graduates. Digital Marketers are responsible for maintaining the company\'s online presence and reputation. Digital Marketers use content marketing, search engine optimization, social media marketing, and various other techniques.</li>
        \n\n<li><b>Computer Programmer :</b>
            \n\nA computer programmer\'s job profile, which is broadly included in the BCA, is to write and write computer software code, ensuring a smooth flow of computer programs, testing their functionality, and working on the program\'s documentation.</li>
        \n\n<li><b>System Engineer :</b>
            \n\nThe system engineer is responsible for managing and monitoring the operating systems and software installed in the company. In addition, they configure and test software applications and systems management tools to maximize the use of the technical infrastructure for company employees.</li>
        </ul>
        \n\n\n<b>Courses after BCA :</b>
        \n\n<ul><li>MCA (Master of Computer Application)</li>
        \n\n<li>MBA (Master of Business Administration)</li></ul>
    </string>
</resources>