<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/blue"
    android:orientation="vertical">

  <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center_horizontal"
        android:padding="25dp"
        android:text="SCIENCE"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold">

    </TextView>

  </RelativeLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:layout_marginTop="30dp"
      android:background="@drawable/rounded_corners_white1"
      >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corners_white1"
        >
      <ScrollView
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="0dp"
            android:background="@drawable/rounded_corners_white1">

          <androidx.cardview.widget.CardView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="0dp"
              android:layout_marginTop="0dp"
              android:layout_marginEnd="10dp"
              android:layout_marginBottom="0dp"
              app:cardBackgroundColor="@color/blue"
              app:cardCornerRadius="20dp"
              app:cardElevation="10dp"
              app:cardMaxElevation="12dp"
              app:cardPreventCornerOverlap="true"
              app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/pcm_choices_sub"
                android:textColor="@color/white"
                android:textSize="20sp" />
          </androidx.cardview.widget.CardView>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="150dp"
              android:layout_marginBottom="10dp"
              android:text="@string/pcm_choices1"
              android:textSize="15sp" />

          <Button
              android:id="@+id/btn53"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="200dp"
              android:layout_marginRight="10dp"
              android:layout_marginBottom="20dp"
              android:background="#fff"
              android:elevation="40dp"
              android:padding="10dp"
              android:text="@string/pcm11"
              android:textSize="15sp" />

          <Button
              android:id="@+id/btn54"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="255dp"
              android:layout_marginRight="10dp"
              android:layout_marginBottom="20dp"
              android:background="#fff"
              android:elevation="40dp"
              android:padding="10dp"
              android:text="@string/pcm12"
              android:textSize="15sp" />

          <Button
              android:id="@+id/btn55"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="320dp"
              android:layout_marginRight="10dp"
              android:layout_marginBottom="20dp"
              android:background="#fff"
              android:elevation="40dp"
              android:padding="10dp"
              android:text="@string/pcm13"
              android:textSize="15sp" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="400dp"
              android:layout_marginBottom="10dp"
              android:text="@string/pcm_choices2"
              android:textSize="15sp" />

          <Button
              android:id="@+id/btn56"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="430dp"
              android:layout_marginRight="10dp"
              android:layout_marginBottom="20dp"
              android:background="#fff"
              android:elevation="40dp"
              android:padding="10dp"
              android:text="@string/pcm21"
              android:textSize="15sp" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="500dp"
              android:layout_marginBottom="10dp"
              android:text="@string/pcm_choices3"
              android:textSize="15sp" />

          <Button
              android:id="@+id/btn57"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="530dp"
              android:layout_marginRight="10dp"
              android:layout_marginBottom="20dp"
              android:background="#fff"
              android:elevation="40dp"
              android:padding="10dp"
              android:text="@string/pcm31"
              android:textSize="15sp" />

          <androidx.cardview.widget.CardView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="0dp"
              android:layout_marginTop="580dp"
              android:layout_marginEnd="10dp"
              android:layout_marginBottom="0dp"
              app:cardBackgroundColor="@color/blue"
              app:cardCornerRadius="20dp"
              app:cardElevation="10dp"
              app:cardMaxElevation="12dp"
              app:cardPreventCornerOverlap="true"
              app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/pcb_choices_sub"
                android:textColor="@color/white"
                android:textSize="20sp" />
          </androidx.cardview.widget.CardView>

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="700dp"
              android:layout_marginBottom="10dp"
              android:text="@string/pcb_choices1"
              android:textSize="15sp" />

          <Button
              android:id="@+id/btn58"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="730dp"
              android:layout_marginRight="10dp"
              android:layout_marginBottom="20dp"
              android:background="#fff"
              android:elevation="40dp"
              android:padding="10dp"
              android:text="@string/pcb1"
              android:textSize="15sp" />

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="800dp"
              android:layout_marginBottom="10dp"
              android:text="@string/pcb_choices2"
              android:textSize="15sp" />

          <Button
              android:id="@+id/btn59"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="830dp"
              android:layout_marginRight="10dp"
              android:layout_marginBottom="20dp"
              android:background="#fff"
              android:elevation="40dp"
              android:padding="10dp"
              android:text="@string/pcb2"
              android:textSize="15sp" />

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="900dp"
              android:layout_marginBottom="10dp"
              android:text="@string/pcb_choices3"
              android:textSize="15sp" />

          <Button
              android:id="@+id/btn60"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="930dp"
              android:layout_marginRight="10dp"
              android:layout_marginBottom="20dp"
              android:background="#fff"
              android:elevation="40dp"
              android:padding="10dp"
              android:text="@string/pcb3"
              android:textSize="15sp" />

        </RelativeLayout>
      </ScrollView>


    </RelativeLayout>
  </RelativeLayout>
</LinearLayout>











