<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="52dp"
        android:text="@string/sub_name"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cd11"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginStart="28dp"

        android:layout_marginTop="184dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="35dp"
        app:cardElevation="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn53"
            android:layout_width="250dp"
            android:layout_height="100dp"

            android:layout_gravity="center"
            android:background="@drawable/rounded_corners_white"
            android:text="@string/class10"
            android:textColor="@color/blue"
            android:textSize="25sp"

            android:textStyle="bold"
            tools:ignore="HardcodedText" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cd12"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="424dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="35dp"
        app:cardElevation="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn54"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corners_white"
            android:text="@string/class12"
            android:textColor="@color/blue"
            android:textSize="25dp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>